name:                hattis
version:             0.1.0.0
synopsis:            A cli-interface to the online coding judge kattis.com
description:         Please see README.md
homepage:            http://github.com/emilgedda/hattis#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Emil Gedda
maintainer:          emil.gedda@emilgedda.se
copyright:           2015 Emil Gedda
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src,
                       src/Hattis
  exposed-modules:     Hattis,
                       Hattis.Arguments
                       Hattis.Error,
                       Hattis.Network
                       Hattis.Text.Ini
                       Hattis.Text.SourceFile
  build-depends:       base >= 4.7 && < 5
                     , utf8-string
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , html-conduit
                     , http-client
                     , http-conduit
                     , megaparsec 
                     , mtl
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

executable hattis
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hattis
                     , mtl
                     , bytestring
                     , optparse-applicative >= 0.12 && <= 0.15
  default-language:    Haskell2010

test-suite hattis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hattis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emilgedda/hattis
