name: hattis
version: 1.0.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD-3
license-file: LICENSE
copyright: 2015-2016 Emil Gedda
maintainer: emil.gedda@emilgedda.se
homepage: http://github.com/emilgedda/hattis#readme
synopsis: A cli-interface to the online coding judge kattis.com
description:
    Please see README.md
category: Network
author: Emil Gedda

source-repository head
    type: git
    location: https://github.com/emilgedda/hattis

library
    exposed-modules:
        Hattis.Error
        Hattis.Network
        Hattis.Text.Ini
        Hattis.Text.Make
        Hattis.Text.SourceFile
    build-depends:
        base >=4.9.0.0 && <4.10,
        utf8-string >=1.0.1.1 && <1.1,
        bytestring >=0.10.8.1 && <0.11,
        containers >=0.5.7.1 && <0.6,
        directory >=1.2.6.2 && <1.3,
        filepath >=1.4.1.0 && <1.5,
        http-client >=0.4.31.1 && <0.5,
        http-conduit >=2.1.11 && <2.2,
        megaparsec >=5.0.1 && <5.1,
        mtl >=2.2.1 && <2.3,
        optparse-applicative >=0.12.1.0 && <0.13,
        hxt >=9.3.1.16 && <9.4,
        text >=1.2.2.1 && <1.3,
        free >=4.12.4 && <4.13
    default-language: Haskell2010
    hs-source-dirs: src src/Hattis

executable hattis
    main-is: Main.hs
    build-depends:
        base >=4.9.0.0 && <4.10,
        hattis >=1.0.0.0 && <1.1,
        mtl >=2.2.1 && <2.3,
        ansi-terminal >=0.6.2.3 && <0.7,
        optparse-applicative >=0.12 && <=0.15
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite hattis-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9.0.0 && <4.10,
        hattis >=1.0.0.0 && <1.1
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
