name:                kattis
version:             0.1.0.0
synopsis:            A cli-interface to the online coding judge kattis.com
description:         Please see README.md
homepage:            http://github.com/emilgedda/kattis#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Emil Gedda
maintainer:          emil.gedda@emilgedda.se
copyright:           2015 Emil Gedda
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Settings
                     , GetOpt
                     , Error
                     , SourceFile
                     , Arguments
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , directory
                     , filepath
                     , ini
                     , parsec
                     , unordered-containers
  default-language:    Haskell2010

executable kattis
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kattis
                     , mtl
  default-language:    Haskell2010

test-suite kattis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kattis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kattis
